Se agrega ejercicio 1 resuelto

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>TP4 de Javascript</title>
   </head>
   <body>
-    <script src="#"></script>
+    <script src="./js/1-crearUnObjeto.js"></script>
     <script></script>
   </body>
 </html>
