--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <title>TP4 de Javascript</title>
   </head>
   <body>
-    <script src="./js/3-rectanguloPerimetroYArea.js"></script>
-    <script></script>
+    <script src="./js/4-instanciarObjetos.js"></script>
   </body>
 </html>
