--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <title>TP4 de Javascript</title>
   </head>
   <body>
-    <script src="./js/4-instanciarObjetos.js"></script>
+    <script src="./js/2-cuentaBancaria.js"></script>
   </body>
 </html>
